src/main/java/com/example/baekerrule/error/exception/TokenValidException.java
package com.example.baekerrule.error.exception;

public class TokenValidException extends ValidException {

    public TokenValidException(String msg) {
        super(msg);
    }
}
